--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
   </head>
-  <body class="bg-teal-950 text-white font-body min-h-dvh">
+  <body class="bg-white text-neutral-800 dark:bg-teal-950 dark:text-white font-body min-h-dvh">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
